--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<button>Add</button>
 			</form>
 
-			<a href="https://www.thenetninja.co.uk">The Net Ninja</a>
+			<a href="philantiporda.netlify.app/">Phil Antiporda</a>
 		</footer>
 
 		<script src="sandbox.js"></script>
