Updates the ts file to es2015. Adds an attribute to html script tag type=module

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 			<a href="philantiporda.netlify.app/">Phil Antiporda</a>
 		</footer>
 
-		<script src="sandbox.js"></script>
-		<script src="app.js"></script>
+		<script type="module" src="sandbox.js"></script>
+		<script type="module" src="app.js"></script>
 	</body>
 </html>
